--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@ title: Your New Jekyll Site
 		<script type="text/javascript" src="//use.typekit.net/tkt0mro.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
+		<style>
+			#invites {
+				text-align:center;
+			}
+			#invites img {
+				width:45%;
+				display:inline-block;
+			}
+		</style>
+
 	</head>
 
 	<body class="domestica summer" ontouchstart="">
@@ -40,6 +50,18 @@ title: Your New Jekyll Site
 					<iframe src="https://www.flickr.com/photos/standardpixel/14484249624/in/set-72157644874078519/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 					<h2>The Honeymoon</h2>
 					<iframe src="https://www.flickr.com/photos/standardpixel/14316316142/in/set-72157644942060922/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+				</section>
+
+				<section style="padding-bottom:10px;" id="invites">
+					<h2>The invitation</h2>
+					<picture>
+					   <source src="style/invite_front.png">
+					   <img src="style/invite_front.png" alt="Front of the invitation.">
+					</picture>
+					<picture>
+						<source src="style/invite_back.png">
+						<img src="style/invite_back.png" alt="Back of the invitation.">
+					</picture>
 				</section>
 
 				<section style="padding-bottom:10px;">
