--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title: Your New Jekyll Site
 				</section>
 
 				<section style="padding-bottom:10px;" id="invites">
-					<h2>The invitation</h2>
+					<h2 style="text-align:left;">The invitation</h2>
 					<picture>
 					   <source src="style/invite_front.png">
 					   <img src="style/invite_front.png" alt="Front of the invitation.">
